--- a/package.json
+++ b/package.json
@@ -14,21 +14,29 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.9",
+    "@codemirror/lang-rust": "^6.0.1",
     "@hookform/resolvers": "^3.1.1",
+    "@lezer/highlight": "^1.1.6",
     "@project-serum/anchor": "^0.26.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@solana/web3.js": "^1.77.3",
-    "class-variance-authority": "^0.6.0",
+    "@uiw/codemirror-theme-github": "^4.21.7",
+    "@uiw/codemirror-themes": "^4.21.7",
+    "@uiw/react-codemirror": "^4.21.7",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "localforage": "^1.10.0",
-    "lucide-react": "0.248.0",
-    "next": "^13.4.6",
+    "lucide-react": "0.256.0",
+    "next": "^13.4.7",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-json-view": "^1.21.3",
     "sharp": "^0.32.1",
     "sonner": "^0.5.0",
     "tailwind-merge": "^1.13.2",
@@ -38,19 +46,19 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
-    "@types/node": "^20.3.1",
-    "@types/react": "^18.2.13",
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
-    "eslint-config-next": "13.4.6",
+    "eslint-config-next": "13.4.7",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.5"
   }
 }
