--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@solana/wallet-adapter-base": "^0.9.22",
+    "@solana/wallet-adapter-react": "^0.15.32",
+    "@solana/wallet-adapter-wallets": "^0.19.18",
     "@solana/web3.js": "^1.77.3",
     "@uiw/codemirror-theme-github": "^4.21.7",
     "@uiw/codemirror-themes": "^4.21.7",
     "@uiw/react-codemirror": "^4.21.7",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "jotai": "^2.2.1",
     "localforage": "^1.10.0",
     "lucide-react": "0.256.0",
     "next": "^13.4.7",
