--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@codemirror/lang-rust": "^6.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@lezer/highlight": "^1.1.6",
+    "@paralleldrive/cuid2": "^2.2.1",
     "@project-serum/anchor": "^0.26.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
